Adding google advertising

--- a/themes/ananke/layouts/partials/page-header.html
+++ b/themes/ananke/layouts/partials/page-header.html
@@ -24,4 +24,13 @@
       {{ partial "site-navigation.html" . }}
     </div>
   </header>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16920169294"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16920169294');
+</script>
 {{ end }}
