--- a/themes/ananke/layouts/partials/site-header.html
+++ b/themes/ananke/layouts/partials/site-header.html
@@ -33,4 +33,13 @@
       </div>
     </div>
   </header>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16920169294"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16920169294');
+</script>
 {{ end }}
