--- a/themes/ananke/layouts/partials/site-header.html
+++ b/themes/ananke/layouts/partials/site-header.html
@@ -19,7 +19,7 @@
     </div>
   </header>
 {{ else }}
-  <header>
+  <header><br>
     <div class="pb2-m pb2-l {{ .Site.Params.background_color_class | default "bg-black" }}">
       {{ partial "site-navigation.html" . }}
       <div class="tc-l pv3 ph3 ph4-ns">
