--- a/themes/ananke/layouts/partials/page-header.html
+++ b/themes/ananke/layouts/partials/page-header.html
@@ -4,12 +4,11 @@
   {{ $featured_image_class := .Params.featured_image_class | default "cover bg-center" }}
   {{ $cover_dimming_class := .Params.cover_dimming_class | default "bg-black-60" }}
   <header class="{{ $featured_image_class }}" style="background-image: url('{{ $featured_image }}');">
-    <br>
     <div class="{{ $cover_dimming_class }}">
       {{ partial "site-navigation.html" . }}
       <div class="tc-l pv6 ph3 ph4-ns">
         {{ if not .Params.omit_header_text }}
-          <div class="f2 f1-l fw2 white-90 mb0 lh-title">{{ .Title | default .Site.Title }}</div>
+          <div class="f2 f1-l fw2 white-90 mb0 lh-title">{{ .Title | default .Site.Title }}<br></div>
           {{ with .Params.description  }}
             <div class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
               {{ . }}
