--- a/themes/ananke/layouts/partials/site-header.html
+++ b/themes/ananke/layouts/partials/site-header.html
@@ -9,7 +9,7 @@
       <div class="tc-l pv4 pv6-l ph3 ph4-ns">
         <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
           {{ .Title | default .Site.Title }}
-        </h1>
+        </h1><br>
         {{ with .Params.description }}
           <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
             {{ . }}
@@ -19,7 +19,7 @@
     </div>
   </header>
 {{ else }}
-  <header><br>
+  <header>
     <div class="pb2-m pb2-l {{ .Site.Params.background_color_class | default "bg-black" }}">
       {{ partial "site-navigation.html" . }}
       <div class="tc-l pv3 ph3 ph4-ns">
