--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -1,5 +1,5 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l content-between items-center center">
+  <div class="flex-l justify-start items-center center">
     <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-white no-underline white-90 dib">
       {{ with .Site.Params.site_logo }}
         <img src="{{ relURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
@@ -9,6 +9,7 @@
         <br>
       {{ end }}
     </a>
+    <br>
     <div class="flex-l justify-around">
       {{ partial "i18nlist.html" . }}
       {{ if .Site.Menus.main }}
