--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -1,5 +1,5 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l justify-start items-center center">
+  <div class="flex-l flex-column items-center center">
     <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-white no-underline white-90 dib">
       {{ with .Site.Params.site_logo }}
         <img src="{{ relURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
@@ -10,7 +10,7 @@
       {{ end }}
     </a>
     <br>
-    <div class="flex-l justify-around">
+    <div class="flex-l items-center">
       <br>
       {{ partial "i18nlist.html" . }}
       {{ if .Site.Menus.main }}
@@ -19,7 +19,7 @@
           <li class="list f5 f4-ns fw4 dib {{ cond (eq $.Site.Language.LanguageDirection "rtl") "pl3" "pr3" }}">
             <a class="hover-white no-underline white-90" href="{{ .URL }}" title="{{ i18n "pageTitle" . }}">
               {{ .Name }}
-            </a>
+            </a><br>
           </li>
           {{ end }}
         </ul>
