--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -3,10 +3,11 @@
     <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-white no-underline white-90 dib">
       {{ with .Site.Params.site_logo }}
         <img src="{{ relURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
-        <br>
+        <p align="center">
       {{ else }}
         {{ .Site.Title }}
-        <br>
+        </P>
+        <P>1011 Post Road Unit C</P>
       {{ end }}
     </a>
     <br>
