header changes and fixes

--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -7,11 +7,11 @@
       {{ else }}
         {{ .Site.Title }}
         </P>
+        <P class="center f2 fw1">1011 Post Road Unit C</P>
       {{ end }}
     </a>
-    <P align="center" class="f4 center">1011 Post Road Unit C</P>
     <br>
-    <div class="flex items-center">
+    <div class="flex items-center center">
       <br>
       {{ partial "i18nlist.html" . }}
       {{ if .Site.Menus.main }}
