--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -1,6 +1,6 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex flex-center items-center center">
-    <a href="{{ .Site.Home.RelPermalink }}" class="center f2 fw2 hover-white no-underline white-90">
+  <div class="flex flex-column items-center center">
+    <a href="{{ .Site.Home.RelPermalink }}" class="center fw2 hover-white no-underline white-90">
       {{ with .Site.Params.site_logo }}
         <img src="{{ relURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
         <p class="center">
