--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -18,9 +18,9 @@
         <ul class="{{ cond (eq $.Site.Language.LanguageDirection "rtl") "pr0 ml3" "pl0 mr3" }}" center>
           {{ range .Site.Menus.main }}
           <li class="list f5 f4-ns fw4 center {{ cond (eq $.Site.Language.LanguageDirection "rtl") "pl3" "pr3" }}">
-            <a class="hover-white no-underline white-90" href="{{ .URL }}" title="{{ i18n "pageTitle" . }}">
+            <a class="hover-white no-underline white-90 center" href="{{ .URL }}" title="{{ i18n "pageTitle" . }}">
               {{ .Name }}
-            </a><br>
+            </a>
           </li>
           {{ end }}
         </ul>
