--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -1,5 +1,5 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex flex-column items-center center">
+  <div class="flex justify-between items-center center">
     <a href="{{ .Site.Home.RelPermalink }}" class="center f3 fw2 hover-white no-underline white-90">
       {{ with .Site.Params.site_logo }}
         <img src="{{ relURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
@@ -12,7 +12,7 @@
         </p>
       {{ end }}
     </a>
-    <div class="flex items-center center">
+    <div class="flex items-center">
       {{ partial "i18nlist.html" . }}
       {{ if .Site.Menus.main }}
         <ul class="{{ cond (eq $.Site.Language.LanguageDirection "rtl") "pr0 ml3" "pl0 mr3" }}">
