Header and intro

--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -7,7 +7,7 @@
       {{ else }}
         {{ .Site.Title }}
         </p>
-        <p class="center f4">1011 Post Road Unit C. Oakdale, CA 95361
+        <p class="center f4">Complete Auto Maintenance & Repair
         </p>
       {{ end }}
     </a>
