--- a/themes/ananke/layouts/partials/site-header.html
+++ b/themes/ananke/layouts/partials/site-header.html
@@ -24,7 +24,7 @@
     <div class="pb2-m pb2-l {{ .Site.Params.background_color_class | default "bg-black" }}">
       {{ partial "site-navigation.html" . }}
       <div class="tc-l pv3 ph3 ph4-ns">
-        <img src="{{ `images/OakdaleRepair.png` | relLangURL }}">
+        <img src="{{ `images/OakdaleAutoRepair.png` | relLangURL }}">
         {{ with .Params.description }}
           <h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
             {{ . }}
