--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -7,7 +7,7 @@
       {{ else }}
         {{ .Site.Title }}
         </p>
-        <p class="center f4">Complete Automotive Service, Maintenance, and Repair
+        <p class="center f4">1011 Post Road, Oakdale, CA
         </p>
       {{ end }}
     </a>
