--- a/themes/ananke/layouts/partials/site-header.html
+++ b/themes/ananke/layouts/partials/site-header.html
@@ -9,7 +9,7 @@
       <div class="tc pv4 pv6-l ph3 ph4-ns">
         <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
           <P>{{ .Title | default .Site.Title }}</P>
-          <P>1011 Post Road Unit C</P>
+          <P>Call [209-318-9352](tel:2093189352)</P>
         </h1><br>
         {{ with .Params.description }}
           <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
@@ -24,7 +24,7 @@
     <div class="pb2-m pb2-l {{ .Site.Params.background_color_class | default "bg-black" }}">
       {{ partial "site-navigation.html" . }}
       <div class="tc-l pv3 ph3 ph4-ns">
-        <img src="{{ `images/OakdaleAutoService.png` | relLangURL }}">
+        <img src="{{ `images/Oakdale_Auto_Repair.png` | relLangURL }}">
         {{ with .Params.description }}
           <h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
             {{ . }}
