--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -7,7 +7,9 @@
       {{ else }}
         {{ .Site.Title }}
         </p>
-        <p class="center f4">Call [209-318-9352](tel:2093189352)
+        <p class="center f4">
+          {{ .Site.Params.About | markdownify }}
+          Call [209-318-9352](tel:2093189352)
         </p>
       {{ end }}
     </a>
