--- a/themes/ananke/layouts/partials/site-navigation.html
+++ b/themes/ananke/layouts/partials/site-navigation.html
@@ -1,6 +1,6 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex justify-between items-center center">
-    <a href="{{ .Site.Home.RelPermalink }}" class="f3 fw2 hover-white no-underline white-90 dib">
+    <a href="tel:2093189352" class="f3 fw2 hover-white no-underline white-90 dib">
       {{ with .Site.Params.site_logo }}
         <img src="{{ relURL . }}" class="w100 mw5-ns" alt="{{ $.Site.Title }}" />
         <p class="center">
@@ -8,8 +8,7 @@
         {{ .Site.Title }}
         </p>
         <p class="center f4">
-          {{ .Site.Params.About | markdownify }}
-          Call [209-318-9352](tel:2093189352)
+          Call (209) 318-9352
         </p>
       {{ end }}
     </a>
